    Copyright (C) 2008 Thomas Pani
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
    notice and this notice are preserved.


Changes from 0.2 to 0.2.1
-------------------------
    + fix newline issue w/ multiple devices (thanks to Andy Piper)

Changes from 0.1.1 to 0.2
-------------------------
    + kernel 2.6.28 sysfs interface support
    + ability to monitor more than one device

Changes from 0.1.1 to 0.2
-------------------------
    fix: show error icon when no HDAPS ready drive is found 