@@ -1,15 +1,20 @@
 AUTOMAKE_OPTIONS = foreign
 
+if MAKE_DESKTOP_ENTRY
+applicationsdir = $(datadir)/applications
+applications_DATA = thinkhdaps.desktop
+endif
+
+pixmapdir = $(datadir)/pixmaps
+pixmap_DATA = thinkhdaps-error.svg  thinkhdaps-logo.svg  thinkhdaps-paused.svg
+
 bin_SCRIPTS = thinkhdaps
 CLEANFILES = $(bin_SCRIPTS)
-EXTRA_DIST = thinkhdaps.py
-
-pixmapsdir = $(datadir)/@PACKAGE@
-dist_pixmaps_DATA = thinkhdaps-error.svg  thinkhdaps-logo.svg  thinkhdaps-paused.svg
+EXTRA_DIST = thinkhdaps.py ${applications_DATA} ${pixmap_DATA}
 
 thinkhdaps: thinkhdaps.py
 	$(SED) \
-		-e 's|@pkgdatadir[@]|$(pkgdatadir)|g' \
+		-e 's|@pixmapdir[@]|$(pixmapdir)|g' \
 		-e 's|@VERSION[@]|$(VERSION)|g' \
 		-e 's|@PYTHON[@]|$(PYTHON)|g' \
 	   <thinkhdaps.py >thinkhdaps
